[package]
name = "dregg-preflight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Golden Master Preflight: end-to-end integration test gate for devnet -> testnet -> mainnet promotion"

[[bin]]
name = "dregg-preflight"
path = "src/main.rs"

[dependencies]
dregg-sdk = { path = "../sdk" }
# The petname / name-validation primitives relocated up into the networked SDK
# layer (`dregg-sdk-net::names`); the nameservice preflight check links them here.
dregg-sdk-net = { path = "../dregg-sdk-net" }
dregg-circuit = { path = "../circuit" }
# The REAL whole-chain prover (`ivc_turn_chain::prove_turn_chain_recursive` /
# `verify_whole_chain_proof_bytes`) — the sovereign IVC-history check drives it
# over genuinely minted rotated turns instead of the simulated IVC.
dregg-circuit-prove = { path = "../circuit-prove" }
# `prover` gates `rotation_witness::mint_rotated_participant_leg`, the production
# recipe that mints the real rotated turn legs the whole-chain fold consumes.
dregg-turn = { path = "../turn", features = ["prover"] }
dregg-cell = { path = "../cell" }
dregg-cell-crypto = { path = "../cell-crypto" }
dregg-intent = { path = "../intent" }
dregg-commit = { path = "../commit" }
dregg-federation = { path = "../federation" }
dregg-bridge = { path = "../bridge" }
dregg-types = { path = "../types" }
dregg-blocklace = { path = "../blocklace" }
dregg-captp = { path = "../captp" }
dregg-wire = { path = "../wire" }
dregg-storage = { path = "../storage" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
serde_json = "1"
toml = "0.8"

# App crates — exercised by the preflight app integration checks
# (preflight/src/checks/apps.rs): factory-descriptor deploys for the six
# starbridge-apps with factory_birth executor tests, plus real birth turns
# through the embedded executor for subscription and identity.
dregg-app-framework = { path = "../app-framework" }
starbridge-nameservice = { path = "../starbridge-apps/nameservice" }
starbridge-identity = { path = "../starbridge-apps/identity" }
starbridge-subscription = { path = "../starbridge-apps/subscription" }
starbridge-governed-namespace = { path = "../starbridge-apps/governed-namespace" }
starbridge-compartment-workflow-mandate = { path = "../starbridge-apps/compartment-workflow-mandate" }
starbridge-tool-access-delegation = { path = "../starbridge-apps/tool-access-delegation" }

blake3 = "1"
curve25519-dalek = { version = "4", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []

[lints]
workspace = true
