# Standalone workspace: keeps the Solana / SBF dependency tree out of the main
# dregg workspace (like `chain/` and `solana-lock/`). Build native tests:
#   cd solana-settlement && cargo test
# Build the on-chain program (SBF):
#   cd solana-settlement && cargo build-sbf
[workspace]

[package]
name = "dregg-solana-settlement"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Solana on-chain dregg settlement: BN254 Groth16 verify of the 25-lane whole-history proof (the outbound leg; the analog of chain/DreggSettlement.sol)"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# Default builds the on-chain entrypoint. Depending crates / test harnesses that
# provide their own entrypoint opt out with `no-entrypoint`.
no-entrypoint = []

[dependencies]
solana-program = "2.2"
# BN254 alt_bn128 group ops + pairing: the `sol_alt_bn128_*` syscalls on-chain
# (target_os = "solana") and the identical ark-bn254 arithmetic off-chain -- one
# code path for the on-chain verifier and the host verify-path check.
solana-bn254 = "2.2"

[dev-dependencies]
solana-program-test = "2.2"
solana-sdk = "2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[profile.release]
overflow-checks = true
