[package]
name = "dregg-tee-verify"
version = "0.1.0"
edition = "2021"

# Detached from the parent workspace (explicit-members list) so this host-side
# crypto crate builds standalone and never touches the shared root manifest.
[workspace]

[dependencies]
dregg-cell = { path = "../cell" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
x509-parser = { version = "0.16", features = ["verify"] }
p384 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
# Self-signed test PKI (ARK->ASK->VCEK) for the SNP cert-chain test. Default features
# (crypto/pem/ring) supply ECDSA P-384 keygen + PEM export; the p384 `pem` default feature
# (already enabled) supplies PKCS#8 decode so the VCEK signer can be reconstructed from the
# rcgen keypair to body-sign the synthetic report.
rcgen = "0.14"
