[package]
name = "wgpu-babybear-ntt"
version = "0.1.0"
edition = "2021"

# Standalone probe crate — deliberately NOT a workspace member (empty [workspace]
# opts out of the breadstuffs root workspace). Run with `cargo run --release`
# from this directory. Sibling of wgpu-babybear-probe (the Montgomery-mul
# microprobe); this one measures the NTT — the bandwidth-bound kernel — and
# reports throughput as a fraction of peak memory bandwidth. See
# docs/deos/GPU-PROVER-PROTOTYPE.md for the measured results.
[workspace]

[dependencies]
wgpu = "24"
pollster = "0.4"
bytemuck = "1"
rand = "0.8"
rayon = "1"
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec", features = ["parallel"] }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
